--- a/Android/Tag4ReelTest/res/layout/activity_main.xml
+++ b/Android/Tag4ReelTest/res/layout/activity_main.xml
@@ -3,5 +3,12 @@
     android:id="@+id/pager"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.tag4reeltest.MainActivity" />
+    tools:context="com.example.tag4reeltest.MainActivity" >
 
+    	<android.support.v4.view.PagerTabStrip
+    	    android:id="@+id/pgstrip"
+    	    android:layout_width="fill_parent"
+    	    android:layout_height="wrap_content"
+    	    android:layout_gravity="top" />
+    
+    </android.support.v4.view.ViewPager>
