--- a/Android/Tag4ReelTest/res/layout/fragment_main.xml
+++ b/Android/Tag4ReelTest/res/layout/fragment_main.xml
@@ -8,15 +8,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.tag4reeltest.MainActivity$PlaceholderFragment" >
 
-    <Button
-        android:id="@+id/loginbutton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:background="@drawable/loginbuttonshape"
-        android:text="@string/login_button_text" />
-
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
@@ -24,5 +15,15 @@
         android:layout_centerHorizontal="true"
         android:text="@string/login_command"
         android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <Button
+        android:id="@+id/loginbutton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="21dp"
+        android:background="@drawable/loginbuttonshape"
+        android:text="@string/login_button_text" />
 
 </RelativeLayout>
