So many changes
seriously alot

--- a/Android/Tag4ReelTest/res/layout/catch_list_item.xml
+++ b/Android/Tag4ReelTest/res/layout/catch_list_item.xml
@@ -13,4 +13,11 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall" />
+    
+        <!-- Catch id (catch_id) - will be HIDDEN - used to pass to other activity -->
+    <TextView
+        android:id="@+id/catch_id"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone" />
 </LinearLayout>
