--- a/Android/Tag4ReelTest/res/layout/fragment_main.xml
+++ b/Android/Tag4ReelTest/res/layout/fragment_main.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clickable="false"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -9,7 +10,7 @@
     tools:context="com.example.tag4reeltest.MainActivity$PlaceholderFragment" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/fishNameEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -20,10 +21,21 @@
         android:id="@+id/loginbutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView1"
+        android:layout_below="@+id/fishNameEdit"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="21dp"
         android:background="@drawable/loginbuttonshape"
+        android:enabled="false"
         android:text="@string/login_button_text" />
+
+    <Button
+        android:id="@+id/tagButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/loginbutton"
+        android:layout_below="@+id/loginbutton"
+        android:layout_marginTop="33dp"
+        android:background="@drawable/loginbuttonshape"
+        android:text="@string/tag_string" />
 
 </RelativeLayout>
